@@ -35,9 +35,9 @@ class LineSplitterTest {
         assertFalse(result.isEmpty(), "Result should not be empty");
         if (!result.isEmpty()) {
             // Check that the first paragraph has one line
-            assertEquals(1, result.get(0).size(), "Paragraph should have 1 line");
+            assertEquals(1, result.getFirst().size(), "Paragraph should have 1 line");
             // Check that the line contains the expected text
-            assertEquals("Hello world", result.get(0).get(0), "Line should be 'Hello world'");
+            assertEquals("Hello world", result.getFirst().getFirst(), "Line should be 'Hello world'");
         }
 
         // Test with text requiring wrapping
@@ -50,9 +50,9 @@ class LineSplitterTest {
         assertFalse(result.isEmpty(), "Result should not be empty");
         if (!result.isEmpty()) {
             // Check that the first paragraph has multiple lines
-            assertTrue(result.get(0).size() > 1, "Paragraph should have multiple lines");
+            assertTrue(result.getFirst().size() > 1, "Paragraph should have multiple lines");
             // Check that each line is within the maxWidth
-            for (String line : result.get(0)) {
+            for (String line : result.getFirst()) {
                 assertTrue(line.length() <= maxWidth, "Each line should be <= maxWidth");
             }
         }
@@ -66,9 +66,9 @@ class LineSplitterTest {
         assertFalse(result.isEmpty(), "Result should not be empty");
         if (!result.isEmpty()) {
             // Check that the first paragraph has multiple lines
-            assertTrue(result.get(0).size() > 1, "Paragraph should have multiple lines");
+            assertTrue(result.getFirst().size() > 1, "Paragraph should have multiple lines");
             // Check that each line is within the maxWidth
-            for (String line : result.get(0)) {
+            for (String line : result.getFirst()) {
                 assertTrue(line.length() <= maxWidth, "Each line should be <= maxWidth");
             }
         }
@@ -82,8 +82,8 @@ class LineSplitterTest {
         // Check that the result has two paragraphs
         assertEquals(2, result.size(), "Should have 2 paragraphs");
         // Check the content of the paragraphs
-        assertEquals("Paragraph 1", result.get(0).get(0), "First paragraph should be 'Paragraph 1'");
-        assertEquals("Paragraph 2", result.get(1).get(0), "Second paragraph should be 'Paragraph 2'");
+        assertEquals("Paragraph 1", result.get(0).getFirst(), "First paragraph should be 'Paragraph 1'");
+        assertEquals("Paragraph 2", result.get(1).getFirst(), "Second paragraph should be 'Paragraph 2'");
     }
 
     @Test
@@ -118,8 +118,8 @@ class LineSplitterTest {
         List<List<String>> result = LineSplitter.process(text, maxWidth, isHardWrap, spaceChar, bufferFactory, readBuffer, bufferLength);
 
         assertEquals(1, result.size(), "Should have 1 paragraph");
-        assertTrue(result.get(0).size() > 1, "Paragraph should have multiple lines");
-        for (String line : result.get(0)) {
+        assertTrue(result.getFirst().size() > 1, "Paragraph should have multiple lines");
+        for (String line : result.getFirst()) {
             assertTrue(line.length() <= maxWidth, "Each line should be <= maxWidth");
         }
 
@@ -129,7 +129,7 @@ class LineSplitterTest {
         result = LineSplitter.process(text, maxWidth, isHardWrap, spaceChar, bufferFactory, readBuffer, bufferLength);
 
         assertEquals(1, result.size(), "Should have 1 paragraph");
-        assertEquals(1, result.get(0).size(), "Paragraph should have 1 line for soft wrap");
-        assertTrue(result.get(0).get(0).length() > maxWidth, "Line should be longer than maxWidth for soft wrap");
+        assertEquals(1, result.getFirst().size(), "Paragraph should have 1 line for soft wrap");
+        assertTrue(result.getFirst().getFirst().length() > maxWidth, "Line should be longer than maxWidth for soft wrap");
     }
 }
